--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* CSS Document */
 body {
+	font-family: Roboto, Arial, "sans-serif";
 	background: url("../img/doctor.jpg") no-repeat center center fixed;
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
@@ -10,6 +11,7 @@ body {
 	margin: 0;
 	padding: 0;
 	font-size: 1.1em;
+	font-weight: 100;
 }
 p {
 	text-align: justify;
