--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,13 @@ h3, h4{
 	cursor: pointer;
 	color: #A44B00;
 }
+
+.headmenu .item i {
+    font-size: 0.9em;
+}
+
 .headmenu small {
-	font-size: 50%;
+	font-size: 0.65em;
 }
 .footermenu {
 	text-align: center;
@@ -283,7 +288,10 @@ a {
     text-decoration: none;
 }
 
-
+.btn{
+	border-radius: 50px;
+	padding: 4px 30px;
+}
 
 .btn-primary {
     color: #fff;
