--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ img.prod {
 	width: 20%;
 }
 
+img.publicidad{
+    width: 90%;
+    margin: 10px auto;
+    display: block;
+}
 
 
 table.centro td, table.centro th{
@@ -56,16 +61,18 @@ h3, h4{
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
 	border-radius: 20px;
-	margin: 5em 2em 0;
+	margin: 2em 2em 0;
 	height: auto;
 	display: block;
 	background-color: rgba(255,255,255,0.9);
 	padding: 1em;
 }
 .titulo {
-	color: #FFFFFF;
 	text-align: center;
 	font-size: 2em;
+}
+h1.titulo{
+	color: #FFFFFF;
 }
 .subtitulo {
 	text-align: center;
@@ -367,3 +374,5 @@ a:focus {
 .combodate select{
 	border: solid 1px #ccc;
 }
+
+
