--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,49 @@
 /* CSS Document */
+
+@font-face {
+  font-family: 'OpenSans-Bold';
+  src: url('fonts/OpenSans-Bold.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-BoldItalic';
+  src: url('fonts/OpenSans-BoldItalic.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-ExtraBold';
+  src: url('fonts/OpenSans-ExtraBold.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-ExtraBoldItalic';
+  src: url('fonts/OpenSans-ExtraBoldItalic.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-Italic';
+  src: url('fonts/OpenSans-Italic.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-Light';
+  src: url('fonts/OpenSans-Light.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-LightItalic';
+  src: url('fonts/OpenSans-LightItalic.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-Regular';
+  src: url('fonts/OpenSans-Regular.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-SemiBold';
+  src: url('fonts/OpenSans-SemiBold.ttf')  format('truetype')
+}
+@font-face {
+  font-family: 'OpenSans-SemiBoldItalic';
+  src: url('fonts/OpenSans-SemiBoldItalic.ttf')  format('truetype')
+}
+
+
 body {
-	font-family: Roboto, Arial, "sans-serif";
+	font-family: 'OpenSans-Light';
 	background: url("../img/doctor.jpg") no-repeat center center fixed;
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
@@ -68,6 +111,7 @@ h3, h4{
 	padding: 1em;
 }
 .titulo {
+    font-family: 'OpenSans-SemiBold';
 	text-align: center;
 	font-size: 2em;
 }
