--- a/css/style.css
+++ b/css/style.css
@@ -419,4 +419,9 @@ a:focus {
 	border: solid 1px #ccc;
 }
 
-
+input#inputProducto{
+    border-radius: 25px 0 0 25px;
+}
+#searchForm button.btn.btn-primary{
+    border-radius: 0 25px 25px 0;
+}
